menambahkan model nasional

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,10 +12,10 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.uasmobile.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_nasional"
+        android:name="com.example.uasmobile.ui.nasional.NasionalFragment"
+        android:label="@string/menu_nasional"
+        tools:layout="@layout/fragment_nasional" />
 
     <fragment
         android:id="@+id/nav_slideshow"
