--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,8 +7,8 @@
     <fragment
         android:id="@+id/nasionalFragment"
         android:name="com.example.uasmobile.ui.nasional.NasionalFragment"
-        android:label="Nasional Fragment"
-        tools:layout="@layout/fragment_nasional">
+        android:label="fragment_nasional"
+        tools:layout="@layout/fragment_nasional" >
         <action
             android:id="@+id/action_nasionalFragment_to_nasionalDetailFragment"
             app:destination="@id/nasionalDetailFragment" />
@@ -17,37 +16,35 @@
     <fragment
         android:id="@+id/nasionalDetailFragment"
         android:name="com.example.uasmobile.ui.nasional.NasionalDetailFragment"
-        android:label="Detail Nasional">
+        android:label="NasionalDetailFragment" >
         <action
             android:id="@+id/action_nasionalDetailFragment_to_nasionalFragment"
-            app:destination="@id/nasionalFragment"
-            />
+            app:destination="@id/nasionalFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/internasionalFragment"
         android:name="com.example.uasmobile.ui.internasional.InternasionalFragment"
-        android:label="Internasional Fragment"
-        tools:layout="@layout/fragment_internasional">
+        android:label="fragment_internasional"
+        tools:layout="@layout/fragment_nasional" >
         <action
             android:id="@+id/action_internasionalFragment_to_internasionalDetailFragment"
-            app:destination="@id/internasionalDetailFragment" />
+            app:destination="@id/nasionalDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/internasionalDetailFragment"
         android:name="com.example.uasmobile.ui.internasional.InternasionalDetailFragment"
-        android:label="Detail Internasional">
+        android:label="InternasionalDetailFragment" >
         <action
-            android:id="@+id/action_internasionalFragment_to_internasionalDetailFragment"
-            app:destination="@id/internasionalFragment"
-            />
+            android:id="@+id/action_internasionalDetailFragment_to_internasionalFragment"
+            app:destination="@id/nasionalFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/olahragaFragment"
         android:name="com.example.uasmobile.ui.olahraga.OlahragaFragment"
-        android:label="@string/app_name"
-        tools:layout="@layout/fragment_olahraga">
+        android:label="fragment_olahraga"
+        tools:layout="@layout/fragment_olahraga" >
         <action
             android:id="@+id/action_olahragaFragment_to_olahragaDetailFragment"
             app:destination="@id/olahragaDetailFragment" />
@@ -55,10 +52,10 @@
     <fragment
         android:id="@+id/olahragaDetailFragment"
         android:name="com.example.uasmobile.ui.olahraga.OlahragaDetailFragment"
-        android:label="Detail Game" >
+        android:label="OlahragaDetailsFragment" >
         <action
-            android:id="@+id/action_olahragaFragment_to_olahragaDetailFragment"
-            app:destination="@id/olahragaFragment"
-            />
+            android:id="@+id/action_olahragaDetailFragment_to_olahragaFragment"
+            app:destination="@id/olahragaFragment" />
     </fragment>
+
 </navigation>
