--- a/app/src/main/res/layout/nasional_item.xml
+++ b/app/src/main/res/layout/nasional_item.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="16dp"
-                android:text="@{nasional.title"
+                android:text="@{nasional.title}"
                 android:textAppearance="?attr/textAppearanceHeadline6" />
 
         </LinearLayout>
