--- a/app/src/main/res/layout/olahraga_item.xml
+++ b/app/src/main/res/layout/olahraga_item.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:onClick="@{() -> clickListener.onClick(olahraga)}"
         android:padding="10dp">
 
         <LinearLayout
@@ -36,6 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="16dp"
+                android:text="@{olahraga.title}"
                 android:textAppearance="?attr/textAppearanceHeadline6" />
 
         </LinearLayout>
