--- a/app/src/main/res/layout/internasional_item.xml
+++ b/app/src/main/res/layout/internasional_item.xml
@@ -11,6 +11,9 @@
         <variable
             name="clickListener"
             type="com.example.uasmobile.ui.internasional.InternasionalListener" />
+        <variable
+            name="viewModel"
+            type="com.example.uasmobile.ui.internasional.InternasionalViewModel" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
@@ -27,6 +30,7 @@
 
             <ImageView
                 android:id="@+id/item_image"
+                app:imageUrl="@{internasional.image}"
                 android:layout_width="match_parent"
                 android:layout_height="194dp"
                 android:importantForAccessibility="no"
