--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="maroon_200">#900000</color>
+    <color name="maroon_500">#800000</color>
+    <color name="maroon_700">#730d0d</color>
 </resources>
