--- a/app/src/main/res/layout/fragment_olahraga_detail.xml
+++ b/app/src/main/res/layout/fragment_olahraga_detail.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="@{}"
+            android:text="@{viewModel.olahraga.description}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name"
